--- a/code/SpaceConverter/View/src/main/resources/ru/unn/agile/SpaceConverter/view/SpaceConverter.fxml
+++ b/code/SpaceConverter/View/src/main/resources/ru/unn/agile/SpaceConverter/view/SpaceConverter.fxml
@@ -37,7 +37,7 @@
             <HBox>
                <children>
                   <Label text="Result: " />
-                  <Label fx:id="lbResult" text="${viewModel.result}" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+                  <Label fx:id="lbResult" text="${viewModel.resultValue}" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
                   <Separator prefWidth="200.0" visible="false" />
                   <Label text="Status: " />
                   <Label fx:id="lbStatus" text="${viewModel.status}" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
